# OpenfoldersBaseProject

./: .editorconfig  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
src/: CMakeLists.txt  main.cpp
